优化代码,加入最新测试数据